# HCP-workload-optimizer

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  docker-compose.yaml  environment.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tmp.ps1
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml  maturity_epic.yml  maturity_kpi_gap.yml  maturity_milestone_review.yml
.github/workflows/: ci.yaml  docs.yaml  maturity-snapshot.yaml  (+4 more)
claudedocs/: mvp_backlog_p0_p1_p2.md  mvp_design_plan_python_rust_batsim.md  research_hpc_workload_optimizer_20260219.md  system_design_hpc_workload_optimizer.md  systems_first_research_appendix.md
design_docs/: mvp_backlog_p0_p1_p2.md  mvp_design_plan_python_rust_batsim.md  policy_spec_baselines_mvp.md  systems_first_research_appendix.md
docs/: 01-project-charter.md  02-system-architecture.md  03-data-model-and-ingestion.md  04-policy-and-simulation-contract.md  05-ml-runtime-modeling.md  06-fidelity-objective-and-recommendation.md  07-interfaces-cli-and-api.md  08-reproducibility-and-artifacts.md  09-experiment-protocol-mvp.md  10-roadmap-and-open-problems.md  11-engineering-maturity-program.md  README.md  dashboard.md  index.md  paper_outline.md  production-readiness-checklist.md
examples/: quickstart.py
k8s/: alertmanager-config.yaml  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  network-policy.yaml  otel-collector.yaml  pdb.yaml  secret.yaml  service.yaml  servicemonitor.yaml
outputs/: batsim_README.rst
paper/: artifact_appendix.md  hpcopt_paper.md
rust/: Cargo.toml
rust/sim-runner/: Cargo.toml
rust/sim-runner/src/: main.rs
schemas/: adapter_decision.schema.json  adapter_snapshot.schema.json  credibility_dossier.schema.json  engineering_kpi_dashboard.schema.json  fidelity_gate_config.schema.json  fidelity_report.schema.json  invariant_report.schema.json  openapi_baseline.json  policy_config.schema.json  reference_suite_config.schema.json  run_manifest.schema.json  sensitivity_report.schema.json
scripts/: benchmark_suite.py  bootstrap-secrets.sh  check_coverage_thresholds.py  check_docs_consistency.py  check_openapi_compat.py  compare_backends.py  docker_smoke_test.py  dr_backup_restore_drill.py  export_openapi_baseline.py  generate_api_reference.py  generate_kpi_snapshot.py  production_readiness_gate.py  reproduce_paper.py  rl_policy_search.py  run_drift_monitor.py  train_rl_policy.py  verify.ps1  verify_version_consistency.py
site/: 404.html  dashboard.html  index.html  sitemap.xml
tests/: conftest.py
(+262 files in other folders)
