[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-workload-optimizer"
version = "0.1.0"
description = "Systems-first HPC workload optimizer (Python + Rust scaffolding)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "HPC Workload Optimizer Team" }
]
dependencies = [
  "typer>=0.12.3,<1.0",
  "pydantic>=2.8.2,<3.0",
  "pandas>=2.2.2,<3.0",
  "pyarrow>=16.1.0,<18.0",
  "pyyaml>=6.0.1,<7.0",
  "fastapi>=0.112.0,<1.0",
  "uvicorn>=0.30.0,<1.0",
  "scikit-learn>=1.5.0,<2.0",
  "joblib>=1.4.0,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "httpx>=0.27.0"
]
analysis = [
  "shap>=0.44",
  "optuna>=3.6"
]
production = [
  "prometheus-client>=0.20.0,<1.0",
  "jsonschema>=4.20.0,<5.0"
]

[project.scripts]
hpcopt = "hpcopt.cli.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
