[package]
name = "sim-runner"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance discrete-event HPC scheduling simulator"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
